/weather + /weather/swiss + index working state

--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,9 @@ body {
 .content-wrapper {
   padding: 0 1rem;
 }
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+}
