css renaming, fixed test

--- a/components/SimpleChMap/SimpleChMap.module.css
+++ b/components/SimpleChMap/SimpleChMap.module.css
@@ -1,27 +1,27 @@
-.cls1 {
+.canton {
   fill: none;
   stroke-width: 3px;
 }
 
-.cls1,
-.cls2 {
+.canton,
+.lake {
   stroke: #1d1d1b;
   stroke-miterlimit: 10;
 }
 
-.cls2 {
+.lake {
   fill: #53abe0;
   stroke-width: 2px;
 }
 
-.cls3 {
+.marker {
   isolation: isolate;
   font-size: 2rem;
   font-family: ArialMT, Arial;
   text-shadow: 1px 1px 0 #fff, -1px -1px 0 #fff, 0 2px 0 #fff;
 }
 @media (min-width: 768px) {
-  .cls3 {
+  .marker {
     font-size: 1rem;
   }
 }
