fixed times before 12 breaking the pages + css

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -11,6 +11,12 @@
     display: flex;
 }
 
+@media (min-width: 1025px) {
+    .list {
+      padding: 0 29.5rem;
+    }
+  }
+
 .listItem {
     list-style: none;
     padding: 0 .5rem;
